# civicpulse-backend

./: .dockerignore  .env.example  .gitignore  AGENT.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MIGRATION_SAFETY_VALIDATION_REPORT.md  MONITORING_IMPLEMENTATION_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_VALIDATION_REPORT.md  blue_green_migration_strategy.py  blue_green_strategy_20250822_171152.json  chaos_engineering_resilience_report.md  deploy_blue_green_migration.sh  docker-compose.chaos.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  merge_readiness_report_david_williams.md  migration_safety_checklist.py  migration_safety_tests.py  migration_test_data.py  notes.md  pipeline_validation.txt  pr38_review_consolidated_grace_williams.md  pyproject.toml  security-audit-report-robert-anderson.md  security_audit_password_history_john_anderson.md  test_validation_report_alice_wilson.md
.claude/: settings.json
.github/: copilot-instructions.md  settings.yml
chaos_test_results/: final_chaos_engineering_report.json
civicpulse/: admin.py  api_urls.py  apps.py  audit.py  audit_context.py  decorators.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py  views_old.py  viewsets.py
cpback/: asgi.py  settings.py  urls.py  wsgi.py
load-tests/: chaos-load-test.yml
monitoring/: alerting_rules.yml  alertmanager.yml  blackbox.yml  prometheus.yml  recording_rules.yml
plans/: alice-miller-test-fixes-report.md  code-quality-validation-report-michael-williams.md  james-miller-merge-conflict-resolution.md  password-history-implementation-report-james-davis.md  pr38_authentication_review_james_williams.md  redis-production-configuration-david-williams.md  test-fix-password-history-signal-john-johnson.md
report/: Built‑In Training Modules + Community Input & Prioritization.md  Extended Features & Remaining Topics.md  Feature & Use Case Draft.md  Original Notes.md  Technology & Architecture Options.md  comprehensive_requirements_technical_specification.md  (+3 more)
scripts/: init-db.sh  (+10 more)
(+115 files in other folders)
